[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "image-blender"
version = "1.0.0"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "pillow>=10.1.0",
    "matplotlib>=3.8.2",
    "numpy>=1.26.2",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.2",
]
